<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scorekeeper</string>
    <string name="title_player_detail">Player Detail</string>
    
    <!-- Menus -->
    <string name="add_player">Add Player</string>
    <string name="remove_player">Delete Player</string>
    <string name="edit_player">Edit Player</string>
    <string name="reset_player">Reset Player</string>
    <string name="reset_players">Reset Players</string>
    <string name="settings">Settings</string>
    
    <!-- NumpadFragment -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="delete">delete</string>
    <string name="history">history</string>
    <string name="undo">undo</string>
    <string name="clear">clear</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="posneg">+/-</string>
    <string name="enter">Enter</string>
    <string name="equals">=</string>
    
    <!-- Player Detail Fragment -->
    <string name="bidding"><u>Bid</u></string>
    <string name="integer_overflow">Numbers are too large</string>
    
    <!-- Other -->
    <string name="player">Player</string>
    <string name="edit">Edit</string>
    
    <!-- Dialog -->
    <string name="player_name">Player Name</string>
    <string name="reset_dialog_title">Would you like to reset?</string>
    <string name="reset_dialog_description">Do you really want to reset all players scores?</string>
    
    <!-- Settings -->
    <string name="bidding_title">Bidding</string>
    <string name="bidding_enabled">Bidding area is enabled</string>
    <string name="bidding_disabled">Bidding area is disabled</string>
</resources>
